@@ -1,0 +1,8 @@
+# objdump: -dr
+.*:     file format elf64-mmix
+
+Disassembly of section \.text:
+
+0+ <Main>:
+   0:	00000000 	trap 0,0,0
+			1: R_MMIX_24	foo\+0x237
